# vk_teams_bot

./: .gitignore  Makefile  README.md  pyproject.toml
src/: actions.py  config.py  constants.py  main.py  utils.py
src/actions/: annual_vacation.py  bot_action.py  cancel_vacation.py  limits_and_vacations.py  main_menu.py  reschedule_vacation.py  unpaid_vacation.py
src/buttons/: annual_vacation.py  bot_button.py  cancel_vacation.py  limits_and_vacations.py  main_menu.py  reschedule_vacation.py  unpaid_vacation.py
src/callbacks/: __init__.py  callback_dispatcher.py  commands.py  common_bot_button.py  dispatchers.py  limits_and_schedule.py  message.py
src/data/: vacation_limits.py  vacation_schedule.py
src/handlers/: __init__.py  annual_vacation.py  cancel_vacation.py  certificates.py  commands.py  limits_and_schedule.py  main_menu.py  register_handlers.py  reschedule_vacation.py  vacations.py
src/keyboards/: __init__.py  annual_vacation.py  cancel_vacation.py  certificates.py  limits_and_schedule.py  main_menu.py  reschedule_vacation.py  vacations.py
src/messages/: error_messages.py
src/models/: __init__.py  base.py  user_data.py  user_state.py  vacation.py
src/services/: __init__.py  database_service.py  mongo_service.py  redis_service.py
src/sessions/: __init__.py  user_session.py
src/states/: __init__.py  annual_vacation.py  cancel_vacation.py  main_menu.py  reschedule_vacation.py  state_machine.py  state_menu_base.py  user_state_manager.py
src/styles/: button_style.py
src/temporary_data/: vacations.py
tests/: conftest.py  test_utils.py
(+66 files in other folders)
